--- a/PRueba/PRueba.cbp
+++ b/PRueba/PRueba.cbp
@@ -32,13 +32,7 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="lightbulb.h" />
-		<Unit filename="queue.h" />
-		<Unit filename="rbtree.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="rbtree.h" />
-		<Unit filename="stack.h" />
-		<Unit filename="testmain.c">
+		<Unit filename="treeesssss.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
