--- a/Urnas/Urnas.cbp
+++ b/Urnas/Urnas.cbp
@@ -35,6 +35,7 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="queue.h" />
 		<Unit filename="tree.h" />
 		<Extensions>
 			<code_completion />
