--- a/Elevators/Elevators.cbp
+++ b/Elevators/Elevators.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="LightBulbs" />
+		<Option title="Elevators" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/PRueba" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Elevators" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/PRueba" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Elevators" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,12 +31,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="List.h" />
-		<Unit filename="Main.c">
+		<Unit filename="Elevator.h" />
+		<Unit filename="call.h" />
+		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="lightbulb.h" />
-		<Unit filename="tree.h" />
+		<Unit filename="queueCalls.h" />
+		<Unit filename="treeElevators.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
