--- a/Machine Simulation/Machine Simulation.cbp
+++ b/Machine Simulation/Machine Simulation.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="LightBulbs" />
+		<Option title="Machine Simulation" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/PRueba" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Machine Simulation" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/PRueba" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Machine Simulation" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -30,13 +30,15 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-std=c99" />
 		</Compiler>
-		<Unit filename="List.h" />
-		<Unit filename="Main.c">
+		<Unit filename="emulate.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="lightbulb.h" />
-		<Unit filename="tree.h" />
+		<Unit filename="emulate.h" />
+		<Unit filename="main.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
