--- a/Quiz/Quiz.cbp
+++ b/Quiz/Quiz.cbp
@@ -2,21 +2,23 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="LightBulbs" />
+		<Option title="Quiz" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/PRueba" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Quiz" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-std=c99" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/PRueba" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Quiz" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -30,13 +32,11 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-std=c99" />
 		</Compiler>
-		<Unit filename="List.h" />
-		<Unit filename="Main.c">
+		<Unit filename="QUIZ.C">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="lightbulb.h" />
-		<Unit filename="tree.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
